--- a/kviris.html
+++ b/kviris.html
@@ -13,25 +13,23 @@
     <link rel="stylesheet" type="text/css" href="css/custom_style.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-supersquare-caps/css/bpg-banner-supersquare-caps.min.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-quadrosquare/css/bpg-quadrosquare.min.css">
-    <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alk-rounded-mtav-med/css/alk-rounded-mtav-med.min.css">
 
-
-    <title>მთავარი</title>
+    <title></title>
   </head>
   <body>
     <header>
 <nav class="navbar  navbar-dark bg-dark">
-  <a class="navbar-brand" href="file:///C:/Users/user/Desktop/bootstrap/index.html" style="width: 30px; margin-left: 5px;"><img src="img/asoc.png"></a>
+  <a class="navbar-brand" href="index.html" style="width: 30px; margin-left: 5px;"><img src="img/asoc.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="file:///C:/Users/user/Desktop/bootstrap/ganrigi.html">თამაშების განრიგი</a>
+        <a class="nav-link" href="ganrigi.html">თამაშების განრიგი</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///C:/Users/user/Desktop/bootstrap/siaxleebi.html">კვირის მიმოხილვა</a>
+        <a class="nav-link" href="/siaxleebi.html">კვირის მიმოხილვა</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -40,17 +38,18 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 25px;">გუნდების სია</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-left: 40px;">
-          <a class="dropdown-item" href="file:///C:/Users/user/Desktop/bootstrap/east.html">აღმოსავლეთ კონფერენცია</a>
-          <a class="dropdown-item" href="file:///C:/Users/user/Desktop/bootstrap/gundebi.html">დასავლეთ კონფერენცია</a>
+          <a class="dropdown-item" href="east.html">აღმოსავლეთ კონფერენცია</a>
+          <a class="dropdown-item" href="gundebi.html">დასავლეთ კონფერენცია</a>
         </div>
         </a> 
-          <a class="dropdown-item" href="file:///C:/Users/user/Desktop/bootstrap/kviris.html">კვირის მოთამაშე</a>
-          <a class="dropdown-item" href="file:///C:/Users/user/Desktop/bootstrap/statistika.html">მოთამაშეების სტატისტიკა</a>
+          <a class="dropdown-item" href=kviris.html">კვირის მოთამაშე</a>
+          <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
     </ul>
   </div>
-
+</nav>
+</header>
 <div class="schedule">
   <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
 <img class="jms"   src="img/james.jpg">
