--- a/kviris.html
+++ b/kviris.html
@@ -42,14 +42,14 @@
           <a class="dropdown-item" href="gundebi.html">დასავლეთ კონფერენცია</a>
         </div>
         </a> 
-          <a class="dropdown-item" href=kviris.html">კვირის მოთამაშე</a>
+          <a class="dropdown-item" href="kviris.html">კვირის მოთამაშე</a>
           <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
     </ul>
   </div>
 </nav>
-</header>
+</header>   
 <div class="schedule">
   <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
 <img class="jms"   src="img/james.jpg">
