--- a/siaxleebi.html
+++ b/siaxleebi.html
@@ -42,7 +42,7 @@
           <a class="dropdown-item" href="gundebi.html">დასავლეთ კონფერენცია</a>
         </div>
         </a> 
-          <a class="dropdown-item" href=kviris.html">კვირის მოთამაშე</a>
+          <a class="dropdown-item" href="kviris.html">კვირის მოთამაშე</a>
           <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
