--- a/statistika.html
+++ b/statistika.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="ganrigi.html">თამაშების განრიგი</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/siaxleebi.html">კვირის მიმოხილვა</a>
+        <a class="nav-link" href="siaxleebi.html">კვირის მიმოხილვა</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +42,7 @@
           <a class="dropdown-item" href="gundebi.html">დასავლეთ კონფერენცია</a>
         </div>
         </a> 
-          <a class="dropdown-item" href=:kviris.html">კვირის მოთამაშე</a>
+          <a class="dropdown-item" href="kviris.html">კვირის მოთამაშე</a>
           <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
