--- a/east.html
+++ b/east.html
@@ -43,7 +43,7 @@
         </div>
         </a> 
           <a class="dropdown-item" href="kviris.html">კვირის მოთამაშე</a>
-          <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
+          <a class="dropdown-item" href="bootstrap/statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
     </ul>
