--- a/siaxleebi.html
+++ b/siaxleebi.html
@@ -43,14 +43,14 @@
         </div>
         </a> 
           <a class="dropdown-item" href="kviris.html">კვირის მოთამაშე</a>
-          <a class="dropdown-item" href="bootstrap/statistika.html">მოთამაშეების სტატისტიკა</a>
+          <a class="dropdown-item" href="statistika.html">მოთამაშეების სტატისტიკა</a>
         </div>
       </li>
     </ul>
   </div>
 </nav>
     </header>
-    <div>
+    <div class="news">
 <div class="container">
   <img src="img/statia.jpg">
   <p>გამთენიისას NBA-ის ყველა ვარსკლავის მატჩის ძირითადი ხუთეულების ვინაობა გახდა ცნობილი.
@@ -95,6 +95,7 @@
 
 „მემფისთან“ მიღწეული გამარჯვება „ჰიუსტონისთვის“ 25-ე აღმოჩნდა. ტეხასელები დასავლეთ კონფერენციის მეოთხე ადგილს იკავებენ და შემდეგ შეხვედრას საკუთარ პარკეტზე, „ბრუკლინ ნეთსის“, წინააღმდეგ გამართავენ.</p>
   
+</div>
 </div>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
