--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="ganrigi.html">თამაშების განრიგი</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="bootstrap/siaxleebi.html">კვირის მიმოხილვა</a>
+        <a class="nav-link" href="siaxleebi.html">კვირის მიმოხილვა</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,15 +57,15 @@
 	<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-interval="2000">
-      <a href="file:///C:/Users/user/Desktop/bootstrap/east.html"><img src="img/east.gif" class="d-block w-50" alt="..."></a>
+      <a href="east.html" class="img-1"><img src="img/east.gif" class="d-block w-50" alt="..."></a>
     </div>
     <div class="carousel-item" data-interval="2000">
-      <a href="file:///C:/Users/user/Desktop/bootstrap/gundebi.html"><img src="img/west.gif" class="d-block w-50" alt="..."></a>
+      <a href="gundebi.html" class="img-2"><img src="img/west.gif" class="d-block w-50" alt="..."></a>
     </div>
 <!--     <div class="carousel-item">
       <img src="..." class="d-block w-100" alt="...">
     </div> -->
-  </div>
+  </div> 
   <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
