--- a/east.html
+++ b/east.html
@@ -51,6 +51,10 @@
 </nav>
     </header>
 <div class="schedule">
+  <div class="logo" style="width: 40%; margin-left: 10%;">
+  <img src="img/east2.png" class="img-fluid" alt="Responsive image" style="margin-bottom: 5%; margin-top: 5%">
+</div>
+  <div class="table-responsive">
  <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -184,11 +188,9 @@
       <td>49</td>
     </tr>
   </tbody>
+  </div>
 </div>
-    </header>
-<div class="teams" style="margin-left: 350px; margin-top: 50px;">
-  <img src="img/east2.png" class="rounded float-left" alt="...">
-</div>
+
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
