--- a/gundebi.html
+++ b/gundebi.html
@@ -50,10 +50,10 @@
   </div>
 </nav>
 <div class="schedule">
-<div class="teams" style="margin-left: 350px; margin-top: 50px;">
-  <img src="img/west2.png" class="rounded float-left" alt="...">
+<div class="logo" style="width: 40%; margin-left: 10%;">
+  <img src="img/west2.png" class="img-fluid" alt="Responsive image" style="margin-bottom: 5%; margin-top: 5%">
 </div>
- 
+ <div class="table-responsive">
     <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -187,6 +187,7 @@
       <td>49</td>
     </tr>
   </tbody>
+</div>
 </div>
   	</header>
   	    <!-- Optional JavaScript -->
