--- a/kviris.html
+++ b/kviris.html
@@ -51,9 +51,12 @@
 </nav>
 </header>   
 <div class="schedule">
-  <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
-<img class="jms"   src="img/james.jpg">
+    <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
+<img class="img-fluid" src="img/james.jpg" alt="Responsive Image" style="width: 50%; margin-left: 25%;">
+    <div class="table-responsive">
+
 <div class="cnt">
+
     <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -85,6 +88,8 @@
     <tr>
   </tbody>
   </div>
+</div>
+</div>
 </div>
 
         <!-- Optional JavaScript -->
