--- a/statistika.html
+++ b/statistika.html
@@ -51,6 +51,7 @@
 </nav>
     </header>
 <div class="schedule">
+  <div class="table-responsive">
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -298,6 +299,7 @@
     </tr>
   </tbody>
 </table>  
+</div>
 </div>
       <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
