--- a/ganrigi.html
+++ b/ganrigi.html
@@ -51,9 +51,10 @@
 </nav>
     </header>
 <div class="logo">
-  <img src="img/game.png" class="img-fluid" alt="Responsive image" style="height: 700px;">
+  <img src="img/game.png" class="img-fluid" alt="Responsive image">
 </div>
       <div class="schedule">
+        <div class="table-responsive">
    <table class="table table-borderless">
   <thead>
     <tr>
@@ -160,6 +161,7 @@
   </tbody>
 </table>
   </div>
+</div>
 </div>
 <!-- </header> -->
 
