--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <div class="logo">
   <img src="img/nba.jpg" class="img-fluid" alt="Responsive image">
 </div>
-
-	<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+<div class="new">
+	<div id="carouselExampleInterval" class="carousel slide col-5 offset-7" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-interval="2000">
       <a href="east.html" class="img-1"><img src="img/east.gif" class="d-block w-50" alt="..."></a>
@@ -68,14 +68,14 @@
   </div> 
   <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only" style="color: red;">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
-
+<!-- </div> -->
 		</div>
 		</div>
 	</div>
@@ -85,5 +85,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
-  <footer> BY LUKA</footer>
 </html>
