--- a/ganrigi.html
+++ b/ganrigi.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/custom_style.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-supersquare-caps/css/bpg-banner-supersquare-caps.min.css">
-    <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-quadrosquare/css/bpg-quadrosquare.min.css">
-
+    <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-phone-sans-bold/css/bpg-phone-sans-bold.min.css">
     <title></title>
   </head>
   <body>
@@ -163,6 +162,14 @@
   </div>
 </div>
 </div>
+  <footer>
+  <div class="footer-1">
+    ©Luka Lukhumaidze
+  </div>
+  <div class="footer-2">
+    Innovation Center
+  </div>
+  </footer>
 <!-- </header> -->
 
       <!-- Optional JavaScript -->
