--- a/gundebi.html
+++ b/gundebi.html
@@ -49,6 +49,7 @@
     </ul>
   </div>
 </nav>
+    </header>
 <div class="schedule">
 <div class="logo" style="width: 40%; margin-left: 10%;">
   <img src="img/west2.png" class="img-fluid" alt="Responsive image" style="margin-bottom: 5%; margin-top: 5%">
@@ -187,9 +188,18 @@
       <td>49</td>
     </tr>
   </tbody>
+</table>  
 </div>
 </div>
-  	</header>
+
+      <footer>
+  <div class="footer-1">
+    ©Luka Lukhumaidze
+  </div>
+  <div class="footer-2">
+    Innovation Center
+  </div>
+  </footer>
   	    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
