--- a/kviris.html
+++ b/kviris.html
@@ -87,10 +87,17 @@
     </tr>
     <tr>
   </tbody>
+</table>  
+</div>
+</div>
+  <footer>
+  <div class="footer-1">
+    ©Luka Lukhumaidze
   </div>
-</div>
-</div>
-</div>
+  <div class="footer-2">
+    Innovation Center
+  </div>
+  </footer>
 
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
