--- a/siaxleebi.html
+++ b/siaxleebi.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/custom_style.css">
+    <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alk-rounded-nusx-med/css/alk-rounded-nusx-med.min.css">
+    <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/arial-geo/css/arial-geo.min.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-supersquare-caps/css/bpg-banner-supersquare-caps.min.css">
-    <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-quadrosquare/css/bpg-quadrosquare.min.css">
+    
+
 
     <title></title>
   </head>
@@ -50,9 +53,11 @@
   </div>
 </nav>
     </header>
-    <div class="news">
-<div class="container">
+    <div class="container">
+    <div class="row justify-content-center">
+  <div class="col-sm-8">
   <img src="img/statia.jpg">
+  <h2 class="head">  ყველა ვარსკლავის მატჩის ძირითადი ხუთეულების ვინაობა გახდა ცნობილი. </h2>
   <p>გამთენიისას NBA-ის ყველა ვარსკლავის მატჩის ძირითადი ხუთეულების ვინაობა გახდა ცნობილი.
 
 დასავლეთ კონფერენციას „ოლ სტარზე“ ლებრონ ჯეიმსი, კევინ დურანტი, პოლ ჯორჯი, სტეფ კარი და ჯეიმს ჰარდენი წარადგენენ. რაც შეეხება აღმოსავლეთს, აქ რჩეული კალათბურთელების სტატუსი იანის ანტეტოკოუნმპომ, კავაი ლეონარდმა, ჯოელ ემბიდმა კაირი ირვინგმა და კემბა უოკერმა მიიღეს.
@@ -62,8 +67,9 @@
 ყველა ვარსკლავის უქმეები სტარტს 16 თებერვალს აიღებს. უშუალოდ შეხვედრა კი 18 თებერვალს გაიმართება.</p>
 
 </div>
-<div class="container-2">
+<div class="col-sm-8">
   <img src="img/zaza.jpg">
+  <h2> მიჯრით განცდილი ორი მარცხის შემდეგ ზაზა ფაჩულიას „დეტროიტმა“ წარუმატებელი სერია შეწყვიტა.</h2>
   <p>მიჯრით განცდილი ორი მარცხის შემდეგ ზაზა ფაჩულიას „დეტროიტმა“ წარუმატებელი სერია შეწყვიტა. გამთენიისას „პისტონსი“ ენტონი დევისის გარეშე დარჩენილ „ნიუ ორლეან პელიკანსს“ დაუპირისპირდა და დაძაბულ ბრძოლაში იმარჯვა.
 
 დეტროიტელებმა წარმატებას დაცვაში კარგი თამაშის ხარჯზე მიაღწიეს. დუეინ კეისის გუნდმა მეტოქეს მხოლოდ და მხოლოდ 94 ქულა ჩააგდებინა, თავად კი 98-ს დასჯერდა.
@@ -76,8 +82,10 @@
 
 ასევე იხილეთ - გიორგი შერმადინის "უნიკახამ" "ლიმოჟი" დაამარცხა</p>
 </div>
-<div class="container-3">
+<div class="col-sm-8">
   <img src="img/ola.jpg">
+  <h2> „ინდიანა პეისერსის“ სუპერვარსკლავმა, ვიქტორ ოლადიპომ, მძიმე ტრავმა მიიღო.</h2>
+
   <p>„ინდიანა პეისერსის“ სუპერვარსკლავმა, ვიქტორ ოლადიპომ, მძიმე ტრავმა მიიღო. 26 წლის ფეხბურთელმა „ტორონტოსთან“ მატჩში მარჯვენა მუხლი დაიზიანა და პარკეტის საკაცით დატოვება მოუწია. ESPN-ის ინფორმაციით საქმე სერიოზულადაა და შესაძლოა წელს „დიპო“ მოედანზე ვეღარ ვიხილოთ.
 
 „ინდიანას“ მსროლელ მცველს მაგნიტურ-რეზონანსული ტომოგრაფია პარასკევს ჩაუტარდება და დეტალები სწორედ ამის შემდეგ გახდება ცნობილი. „პეისერსის“ წარმომადგენლები შიშობენ, რომ ოლადიპოს ოპერაციის გაკეთება დასჭირდება და სეზონის დარჩენილ ნაწილს გამოტოვებს.
@@ -85,8 +93,10 @@
 ოლადიპო „ინდიანას“ უდავო ლიდერია და მის გარეშე გუნდს წარმატების მიღწევა ძალიან გაუჭირდება. „დიპო“ საშუალოდ 19.2 ქულას. 5.7 მოხსნას და 5.3 ჩაჭრას აგროვებს. რაც შეეხება „პეისერსს“, ნეით მაკმილანის კოლექტივი 32 მოგებითა და 15 მარცხით აღმოსავლეთ კონფერენციის მესამე ადგილს იკავებს.</p>
   
 </div>
-<div class="container-4">
+<div class="col-sm-8">
   <img src="img/harden.jpg">
+  <h2>ნაციონალური საკალათბურთო ასოციაციის მოქმედი MVP, ჯეიმს ჰარდენი, საოცარ ფორმაში იმყოფება. </h2>
+
   <p>ნაციონალური საკალათბურთო ასოციაციის მოქმედი MVP, ჯეიმს ჰარდენი, საოცარ ფორმაში იმყოფება. „ჰიუსტონის“ მსროლელი მცველის შეჩერებას ვერავინ ახერხებს, რაც „მემფისთან“ გამართულ შეხვედრაში კიდევ ერთხელ დადასტურდა.
 
 „დათვების“ წინააღმდეგ ჰარდენმა შესანიშნავად იასპარეზა და პირველ ნახევარში 36 ქულა ჩააგდო. მსგავსი რამ „ჰიუსტონის“ ისტორიაში არავის გაუკეთებია. 29 წლის კალათბურთელმა შეხვედრა 57 ქულით დაასრულა, „როქეთსმა“ კი ჯამში 112 ქულა დააგროვა!
@@ -97,6 +107,15 @@
   
 </div>
 </div>
+</div>
+  <footer>
+  <div class="footer-1">
+    ©Luka Lukhumaidze
+  </div>
+  <div class="footer-2">
+    Innovation Center
+  </div>
+  </footer>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
