--- a/east.html
+++ b/east.html
@@ -188,8 +188,19 @@
       <td>49</td>
     </tr>
   </tbody>
-  </div>
+</table>  
 </div>
+</div>
+
+
+  <footer>
+  <div class="footer-1">
+    ©Luka Lukhumaidze
+  </div>
+  <div class="footer-2">
+    Innovation Center
+  </div>
+  </footer>
 
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -197,4 +208,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
+
 </html>
