--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     </ul>
   </div>
 </nav>
+
   	</header>
+    <div class="viewport">
 <div class="logo">
   <img src="img/nba.jpg" class="img-fluid" alt="Responsive image">
 </div>
@@ -79,6 +81,7 @@
 		</div>
 		</div>
 	</div>
+  </div>
     <footer class="footing">
   <div class="footer-1">
     ©Luka Lukhumaidze
