--- a/kviris.html
+++ b/kviris.html
@@ -49,7 +49,8 @@
     </ul>
   </div>
 </nav>
-</header>   
+</header>  
+<div class="viewport">  
 <div class="schedule">
     <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
 <img class="img-fluid" src="img/james.jpg" alt="Responsive Image" style="width: 50%; margin-left: 25%;">
@@ -90,6 +91,8 @@
 </table>  
 </div>
 </div>
+  </div>
+
   <footer>
   <div class="footer-1">
     ©Luka Lukhumaidze
