--- a/kviris.html
+++ b/kviris.html
@@ -50,7 +50,7 @@
   </div>
 </nav>
 </header>  
-<div class="viewport">  
+<div class="viewport-2">  
 <div class="schedule">
     <h2 style="color: white; margin-left: 50px; margin-top: 50px;">კვირის მოთამაშე: James Harden</h2>
 <img class="img-fluid" src="img/james.jpg" alt="Responsive Image" style="width: 50%; margin-left: 25%;">
