--- a/statistika.html
+++ b/statistika.html
@@ -56,18 +56,18 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th>
-      <th scope="col">Handle</th> 
+      <th scope="col">მოთამაშე</th>
+      <th scope="col">GP</th>
+      <th scope="col">PTS</th>
+      <th scope="col">FGM</th>
+      <th scope="col">FGA</th>
+      <th scope="col">FG%</th>
+      <th scope="col">3PM</th>
+      <th scope="col">3P%</th>
+      <th scope="col">FTM</th>
+      <th scope="col">FTA</th>
+      <th scope="col">FT%</th>
+      <th scope="col">OREB</th> 
     </tr>
   </thead>
   <tbody>
