--- a/east.html
+++ b/east.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-supersquare-caps/css/bpg-banner-supersquare-caps.min.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-quadrosquare/css/bpg-quadrosquare.min.css">
 
-    <title></title>
+    <title>EAST</title>
   </head>
   <body>
     <header>
