--- a/ganrigi.html
+++ b/ganrigi.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom_style.css">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-supersquare-caps/css/bpg-banner-supersquare-caps.min.css">
     <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-phone-sans-bold/css/bpg-phone-sans-bold.min.css">
-    <title></title>
+    <title>განრიგი</title>
   </head>
   <body>
     <header>
